<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:background="@drawable/sea">

    <TextView
        android:id="@+id/winner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:layout_gravity="start"
        android:text="@string/winner"
        android:textSize="60sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingTop="100dp"
        android:paddingStart="150dp">
        <Button
            android:id="@+id/restart_button"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:text="@string/restart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="300dp"
        android:paddingStart="150dp">
    <Button
        android:id="@+id/exit_button"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:text="@string/exit"/>
    </LinearLayout>
</FrameLayout>